--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack --mode=development",
-    "dev-server": "webpack-dev-server --mode=development"
+    "dev-server": "webpack-dev-server --mode=development",
+    "test":"jest"
   },
   "author": "",
   "license": "ISC",
@@ -19,9 +20,12 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "live-server": "^1.2.0",
+    "moment": "^2.22.1",
     "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
     "react": "^16.3.2",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^16.7.0",
     "react-dom": "^16.3.2",
     "react-modal": "^3.4.4",
     "react-redux": "^5.0.7",
@@ -35,6 +39,7 @@
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "jest": "^22.4.4",
     "webpack-cli": "^2.1.3"
   }
 }
