setup production webpack build

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack --mode=development",
+    "build:dev": "webpack --mode=development",
+    "build:prod":"webpack -p --env production",
     "dev-server": "webpack-dev-server --mode=development",
     "test":"jest"
   },
