--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --mode=development",
     "test": "jest",
-    "start":"node server/server.js",
-    "heroku-postbuild":"npm run build:prod"
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "live-server": "^1.2.0",
     "moment": "^2.22.1",
     "node-sass": "^4.9.0",
