--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "firebase": "^4.2.0",
     "live-server": "^1.2.0",
     "moment": "^2.22.1",
     "node-sass": "^4.9.0",
@@ -36,6 +37,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "uuid": "^3.2.1",
